@@ -1,4 +1,5 @@
 Development
+    Add javascript method "SetShowControls", "SetFullScreen"
     Fix firefox-xpcom not being included with firefox 2.0.0.2
 0.0.2
     Cleanup some of the chattyness
